--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.11.0",
+    "bottleneck": "^1.12.0",
     "compression": "^1.6.1",
     "express": "^4.13.4",
     "if-env": "^1.0.0",
