--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mongoose": "^4.4.17",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "react-router": "^2.0.0"
+    "react-router": "^2.0.0",
+    "request": "^2.72.0"
   },
   "devDependencies": {
     "babel-core": "^6.5.1",
